# faceRecognition

./: CMakeLists.txt  datas_csv.txt
doc/eigenfaces_recognition/: articles.bib.bak  zhou_eigenface.aux  zhou_eigenface.bbl  zhou_eigenface.blg  zhou_eigenface.tex  zhou_eigenface.toc
doc/face_recognition_with_opencv/: articles.bib  face_recognition_with_opencv.aux  face_recognition_with_opencv.bbl  face_recognition_with_opencv.blg  face_recognition_with_opencv.tex  face_recognition_with_opencv.toc
doc/fisherfaces_recognition/: fisherfaces_recognition.aux  fisherfaces_recognition.tex
include/CascadeClassifier/: BaseCascadeClassifier.hpp  CascadeClassifier.hpp
include/FACE/: BasicFaceRecognizer.hpp  Covar_Eigen.hpp  FaceRecognizer.hpp  LBPHFaceRecognizer.hpp  PCA.hpp  common_includes.hpp  elbp.hpp  predict_collector.hpp
include/WALDBOOST_CASCADE/: WBDetector.hpp  WaldBoost.hpp  common_includes.hpp  featureEvaluator.hpp  lbpfeatures.hpp
src/: CMakeLists.txt  EigenFaces.cpp  LBPHFaces.cpp  PCA.cpp  predict_collector.cpp
src/CascadeClassifier/: BaseCascadeClassifier.cpp  CascadeClassifier.cpp
src/FACE/: CMakeLists.txt  Covar_Eigen.cpp  FaceRecognizer.cpp  FisherFaces.cpp  elbp.cpp
src/WALDBOOST_CASCADE/: WaldBoost.cpp  featureEvaluator.cpp  lbpfeatures.cpp
test/: CMakeLists.txt  create_csv.py  facerec_eigenfaces.cpp  facerec_fisherfaces.cpp  facerec_lbph.cpp
